# auto-highlighter-processing-service

./: .gitignore  Cargo.toml  Dockerfile  HighlightProcessService.sln  Program.cs  README.MD  Startup.cs  docker-compose.yml
DTOs/: ProccessVodDTO.cs
Properties/: launchSettings.json
Services/: BlobService.cs  IBlobService.cs  IMessageQueueService.cs  IVideoProcessService.cs  MessageQueueService.cs  VideoProcessService.cs
src/: bin.rs  gst.rs  gst_highlighter.rs  lib.rs  rmq.rs
test/ahps/: Cargo.toml
