[package]
name = "auto-highlighter-processing-service"
version = "0.1.0"
authors = ["Dev Ryan <Ryan@DevRyan.io>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "ahps"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
