[package]
name = "auto-highlighter-processing-service"
version = "0.1.0"
authors = ["Dev Ryan <Ryan@DevRyan.io>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "ahps"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["macros", "time", "rt-multi-thread"] }
futures = { version = "0.3", default-features = false }
tokio-amqp = "1.0.0"
deadpool = "0.7.0"
deadpool-lapin = "0.7.0"
lapin = "1.7.1"
thiserror = "1.0.15"
gstreamer = "0.16.7"
gstreamer-editing-services = "0.16.5"
gstreamer-pbutils = "0.16.5"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["v4", "serde"] }